Fix paddings on mobile #4

--- a/themes/plenamata/assets/scss/6-pages/_p-home.scss
+++ b/themes/plenamata/assets/scss/6-pages/_p-home.scss
@@ -7,6 +7,7 @@
 
     #quem_somos,
     #who_we_are {
+        padding: 30px 60px;
         position: relative;
 	    z-index: 2;
 
